k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: index-app
  template:
    metadata:
      labels:
        app: index-app
    spec:
      containers:
        - name: nginx
          image: axanth/cicd-test:latest  # <-- your DockerHub image
          ports:
            - containerPort: 80
