k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: index-service
spec:
  selector:
    app: index-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
