k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: index-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.axanth.gr
        - axanth.gr
      secretName: www-axanth-tls
  rules:
    - host: www.axanth.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: index-service
                port:
                  number: 80
    - host: axanth.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: index-service
                port:
                  number: 80
